--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -1,4 +1,4 @@
 <!doctype.html>
 <html>
-    Hello. This is m page for all my school work.
+    Hello. This is my page for all my school work.
 </html>
