--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
     <p>This is a false statement. 
   </section>
   
-  <a href="/">Where does this link take me??? Can anyone figure out why it's not working?</a>
   
-  <a href="https://kamilm1013.github.io/ECS8th2018_2019/>
+  <a href="https://kamilm1013.github.io/ECS8th2018_2019/" title="My ECS subpage for this school year" target="_blank" >click here</a>
 
 
 </html> <!--for good practice, I always add the closing tag right away-->
