--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </section>
   
   
-  <a href="https://kamilm1013.github.io/ECS8th2018_2019/" title="My ECS subpage for this school year" target="_blank" >click here</a>
+  <a href="https://kamilm1013.github.io/ECS8th2018_2019/" title="My ECS subpage for this school year" target="_blank" >Click here</a>
 
 
 </html> <!--for good practice, I always add the closing tag right away-->
