--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -1,4 +1,6 @@
 <!doctype.html>
 <html>
     Hello. This is my page for all my ECS work for this school year.
+   
+    <a href="https://kamilm1013.github.io/?ECS8th2018_2019/postcard/" target-"blank" title="Go to my postcard" >Click Here</a>
 </html>
