--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -2,5 +2,5 @@
 <html>
     Hello. This is my page for all my ECS work for this school year.
    
-    <a href="https://kamilm1013.github.io/?ECS8th2018_2019/postcard/" target-"blank" title="Go to my postcard" >Click Here</a>
+    <a href="https://kamilm1013.github.io/?ECS8th2018_2019/postcard/" target-"blank" >Click here to go to my postcard project.</a>
 </html>
