--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html> <!--this is an HTML 5 document, should be on line 1 of every code--> 
 <html>  <!--line 2 of every html doc, should have this tag-->
-    Hi this is my website! I live in chicago, and his is my project. 
+    Hi this is my website! I live in chicago, and this is my project. 
      
     <a href="https://kamilm1013.github.io/ECS8th2018_2019/" title="My ECS subpage for this school year" target="_blank" >Click here</a>
 
