--- a/ECS8th2018_2019/postcard/index.html
+++ b/ECS8th2018_2019/postcard/index.html
@@ -48,9 +48,9 @@
     <h3>Date:</h3>
     <p>12/3/18
     <h3>Message:</h3>
-    <p>Do you know that I love almond milk?
-    <p>Get the box of Freezepops from target for $4.99
-    <p>This is a false statement. 
+    <p>Do you know that I love playing soccer?
+    <p>You should look into sports. They are good for you
+    <p>It's true, believe me. 
   </section>
   
   
