--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html> <!--this is an HTML 5 document, should be on line 1 of every code--> 
 <html>  <!--line 2 of every html doc, should have this tag-->
-    <header>
+    <head>
         <title>My First Website</title>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="This is my first website. It is pretty empty right now, but there will be a lot of changes to it soon.">
         <link rel="stylesheet" href="">
-    </header>
+    </head>
    
     <section>
         <h1>Vsauce Memes</h1>
