--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html> <!--this is an HTML 5 document, should be on line 1 of every code--> 
-<html>  <!--line 2 of every html doc, should have this tag-->
+<!doctype html> 
+<html>  
     <head>
         <title>My First Website</title>
         <meta name="viewport" content="width=device-width">
@@ -21,4 +21,4 @@
     </body>
     
     
-</html> <!--for good practice, I always add the closing tag right away-->
+</html> 
