--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -17,7 +17,7 @@
         <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/postcard/" target="_blank" title="My postcard project">Click here to go to my postcard project.</a>
         <br>
-        <a href="KamilM1013.github.io" target="_blank" title="Homepage">Click here to go back home</a> 
+        <a href="https://kamilm1013.github.io/" target="_blank" title="Homepage">Click here to go back home</a> 
         <br>
         <a href="https://KamilM1013.github.io" target="_blank" title="My Favorites">Or to go to my favorites page</a> 
     </body>
