--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>My First Website</title>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="This is my first website. It is pretty empty right now, but there will be a lot of changes to it soon.">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
     </head>
    
     <header>
