--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -4,7 +4,7 @@
         <title>My ECS Subpage</title>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="This is my first ECS 8th period subpage where I will keep my projects.">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
     </head>
    
     <header>
