--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -19,7 +19,7 @@
         <br>
         <a href="https://KamilM1013.github.io/" target="_blank" title="Homepage">Click here to go back home</a> 
         <br>
-        <a href="" target="_blank" title="My Favorites">Or to go to my favorites page</a> 
+        <a href="https://kamilm1013.github.io/ECS8th2018_2019/favorites/index.html" target="_blank" title="My Favorites">Or to go to my favorites page</a> 
     </body>
              
 </html>
