--- a/ECS8th2018_2019/favorites/index.html
+++ b/ECS8th2018_2019/favorites/index.html
@@ -18,7 +18,7 @@
         <a href="https://www.youtube.com/" title="When I get bored." target="_blank">Click here</a>
         <br>
         <p>First of all, memes are life savers. An example of these memes is Vsauce. Some of the memes about him are priceless.</p>
-        <p>Next is youtube. I do everything on youtube. I get my news, I enternain myself, I learn new stuff. The list is endless. It's a good thing for various things.</p>
+        <p>Next is youtube. I do everything on youtube. I get my news, I entertain myself, I learn new stuff. The list is endless. It's a good thing for various things.</p>
     </body>
       
 </html>
