--- a/ECS8th2018_2019/postcard/index.html
+++ b/ECS8th2018_2019/postcard/index.html
@@ -17,17 +17,18 @@
         }
     </style>
   
-  
-  <h1>Post Card</h1>
-  
-  <section>
+    <header>
+        <h1>Post Card</h1>
+    </header>
+    
+    <section>
         <h2>ECS Student</h2>
         <p>211 S. Laflin St.,
         <br>Chicago, IL
         <br>USA
-  </section>
+    </section>
   
-  <section>
+     <section>
         <img width="80px" src="https://codeavengers.com/images/postcard/stamp6.png" alt = "here's a caption for the picture, also used for blind/deaf coders" title = "hover over me for fun!!!!">
    
         <p>Kamil 
@@ -37,10 +38,7 @@
         <p>Do you know that I love playing soccer?
         <p>You should look into sports. They are good for you
         <p>It's true, believe me. 
-  </section>
-  
-  
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/" title="My ECS subpage for this school year" target="_blank" >Click here</a>
-
+    </section>
 
 </html> 
