--- a/delete/index.html
+++ b/delete/index.html
@@ -15,7 +15,7 @@
         Reasons why you should go with the dog
         <br>
         <ul>
-            <li>I will be you
+            <li>I will beat you
             <li>I will make you
             <li>If you don't go, I will make you
             <li>If you don't go, no more ps4
