--- a/ECS8th2018_2019/birthday_invitation/index.html
+++ b/ECS8th2018_2019/birthday_invitation/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="stylesheet" href="/css/profile9.css">
+        <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
         <title>Birthday Invitation</title>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Birthday Invitiation.">
