--- a/ECS8th2018_2019/birthday_invitation/index.html
+++ b/ECS8th2018_2019/birthday_invitation/index.html
@@ -22,7 +22,7 @@
         <h2>What to bring</h2>
         <p>You need to bring your own food.
         <p>You should also bring a lot of presents for me.
-        <h2>My Wishlist</h2>
+        <h2>My Wish List</h2>
         <p>You have to bring me these things if you want to come to my party.
         <br>
         <ul>
