--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -1,1 +1,39 @@
+<!doctype html>
+<html>
+    <head>
+        <title>Batman Begins</title>
+        <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Hey, this is my Movie Review page.">
+        <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
+    </head>
+    
+    <header>
+        <h1>Batman Begins</h1>
+    </header>
+    
+    <section>
+        <img width="280" alt="Batman Begins" title="The Dark Night" src="https://is3-ssl.mzstatic.com/image/thumb/Video128/v4/78/49/41/784941ac-43c4-e3ee-204c-6dd87de283e6/contsched.deqkhkxo.lsr/268x0w.jpg">
+        <p>
+        <strong>Genre:</strong> Action, Adventure, Thriller
+        <br>
+        <strong>Release Date:</strong> June 15<sup>th</sup>, 2005
+        <br>
+        <strong>Director/s:</strong> Christopher Nolan
+        <br>
+        <strong>Company:</strong><a targert="_blank" href="https://www.legendary.com/">Legendary Pictures</a>, 
+        <a target="_blank" href="https://en.wikipedia.org/wiki/Syncopy_Inc.">Syncopy</a>
+        <h2>Movie Summary</h2>
+        <p>As a child, a young Bruce Wayne witnesses the death of his parents at the hands of a crazed criminal. As an adult, Bruce travels the world seeking the means to fight injustice. He lives among the boroughs of criminals and thieves in central Asia. Eventually, he meets a mysterious figure named Ra's Al Guhl and joins his gang called the League Of Shadows. Using his training, he is able to defeat his trainer. Finally meeting up with his estate caretaker Alfred Pennyworth, Bruce Wayne returns to Gotham. There, he becomes the new head of Wayne Enterprises. Together with the help of the CEO of the Wayne Enterprises Applied Sciences division, a man name Lucius Fox, he dons a new persona: Batman. As Batman takes on the criminals and organized crime underworld of Gotham, a sinister new underbelly of the city is exposed, and a new class of criminal is born. Will Batman be the one to stop them all, or does Gotham need a hero with a face?
+        <h2>Trailer</h2>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/neY2xVmOfUM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h2>Characters</h2>
+        <ul>
+          <li><a target="_blank" href="character.html">Bruce Wayne</a> (Batman)
+          <li> Alfred
+          <li> Lucius Fox
+          <li> Ducard
+        </ul>
+    </section>
 
+    <hr>
+    <footer>Created by Kamil, 2018</footer>
