--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -22,6 +22,8 @@
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/favorites/index.html" target="_blank" title="My Favorites">Or to go to my favorites page</a> 
         <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/birthday_invitation/index.html" target="_blank" title="Birthday Invitation">See My Birthday Invitation page!</a>
+        <br>
+        <a href="KamilM1013.github.io/ECS8th2018_2019/movie_review/index.html" target="_blank" title="Movie Review">Check out my new Movie Review!</a>
     </body>
              
 </html>
