--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -4,7 +4,7 @@
         <title>Batman Begins</title>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Hey, this is my Movie Review page.">
-        <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
+        <link rel="stylesheet" href="https://kamilm1013.github.io/ECS8th2018_2019/movie_review/main.css">
     </head>
     
     <header>
