--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -33,6 +33,7 @@
           <li> Lucius Fox
           <li> Ducard
         </ul>
+        <a href="https://kamilm1013.github.io/ECS8th2018_2019/movie_review/character/" target="_blank" title="Movie Character">If you want to know more about this movie click here.</a>
     </section>
 
     <hr>
