--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -17,9 +17,9 @@
         <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/postcard/" target="_blank" title="My postcard project">Click here to go to my postcard project.</a>
         <br>
-        <a href="https://KamilM1013.github.io/" target="_blank" title="Homepage">Click here to go back home</a> 
+        <a href="/" target="_blank" title=""></a> 
         <br>
-        <a href="https://kamilm1013.github.io/ECS8th2018_2019/favorites/index.html" target="_blank" title="My Favorites">Or to go to my favorites page</a> 
+        <a href="" target="_blank" title=""></a> 
         <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/birthday_invitation/index.html" target="_blank" title="Birthday Invitation">See My Birthday Invitation page!</a>
         <br>
