--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -9,6 +9,7 @@
    
     <header>
         <h1>ECS Subpage</h1>
+        <img src="https://kamilm1013.github.io/ECSSelfie.jpg" title="Me and my friend" alt="Me and my friend">
     </header>
     
     <body>
