--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -16,6 +16,10 @@
         <br>
         Hello. This is my page for all my ECS work for this school year.
         <br>
+        I have learned so much this year, but one of the best things is learning how to code. It has really been a game changer for me.
+        <br>
+        Please be on top of things in this class or you will be lost! Ask the people around for help, you'll be surprised by how much they can help.
+        <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/postcard/" target="_blank" title="My postcard project">Click here to go to my postcard project.</a>
         <br>
         <a href="/" target="_blank" title=""></a> 
