--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -22,9 +22,9 @@
         <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/postcard/" target="_blank" title="My postcard project">Click here to go to my postcard project.</a>
         <br>
-        <a href="/" target="_blank" title=""></a> 
+        <a href="https://kamilm1013.github.io/ECS8th2018_2019/postcard/index.html" target="_blank" title="Post Card">My Post Card Project</a> 
         <br>
-        <a href="" target="_blank" title=""></a> 
+        <a href="https://kamilm1013.github.io/ECS8th2018_2019/player_profile/index.html" target="_blank" title="Player Profile">Player Profile</a> 
         <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/birthday_invitation/index.html" target="_blank" title="Birthday Invitation">See My Birthday Invitation page!</a>
         <br>
