--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
     
     <header>
         <h1>About Me</h1>
-        <img="
+        <img src="https://kamilm1013.github.io/MySelfie.jpg" title="Yep, that's me...">
     </header>
     
     <body>
