--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>About Me</title> 
+        <title><a href="https://kamilm1013.github.io/index.html" title="Go Back">About Me</a></title> 
         <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
         <meta name="viewport" content="width=device-width"> 
         <meta name="description" content="Info about me.">
