--- a/about/index.html
+++ b/about/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title><a href="https://kamilm1013.github.io/index.html" title="Go Back">About Me</a></title> 
+        <title>About Me</title> 
         <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
         <meta name="viewport" content="width=device-width"> 
         <meta name="description" content="Info about me.">
     </head>
     
     <header>
-        <h1>About Me</h1>
+        <h1><a href="https://kamilm1013.github.io/index.html" title="Go Back">About Me</a></h1>
         <img src="https://kamilm1013.github.io/MySelfie.jpg" title="Yep, that's me...">
     </header>
     
