--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html> 
     <head>
-        <title>My ECS Subpage</title>
+        <title>My ECS Projects</title>
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="This is my first ECS 8th period subpage where I will keep my projects.">
         <link rel="stylesheet" href="https://kamilm1013.github.io/main.css">
     </head>
    
     <header>
-        <h1>ECS Subpage</h1>
+        <h1><a href="https://kamilm1013.github.io/index.html" title"Go Back">ECS Projects</a></h1>
         <img src="https://kamilm1013.github.io/ECSSelfie.jpg" title="Me and my friend" alt="Me and my friend">
     </header>
     
