--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -28,12 +28,12 @@
         <iframe width="300" height="200" src="https://www.youtube.com/embed/neY2xVmOfUM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2>Characters</h2>
         <ul>
-          <li><a target="_blank" href="character.html">Bruce Wayne</a> (Batman)
+          <li><a target="_blank" href="">Bruce Wayne</a> (Batman)
           <li> Alfred
           <li> Lucius Fox
           <li> Ducard
         </ul>
-        <a href="/" target="_blank" title="Movie Character">If you want to know more about this movie click here.</a>
+        <a href="https://www.imdb.com/title/tt0372784/" target="_blank" title="Movie Character">If you want to know more about this movie click here.</a>
     </section>
 
     <hr>
