--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -33,7 +33,7 @@
           <li> Lucius Fox
           <li> Ducard
         </ul>
-        <a href="https://www.imdb.com/title/tt0372784/" target="_blank" title="Movie Character">If you want to know more about this movie click here.</a>
+        <a href="https://www.imdb.com/title/tt0372784/" title="Movie Character">If you want to know more about this movie click here.</a>
     </section>
 
     <hr>
