--- a/ECS8th2018_2019/movie_review/index.html
+++ b/ECS8th2018_2019/movie_review/index.html
@@ -8,7 +8,7 @@
     </head>
     
     <header>
-        <h1>Batman Begins</h1>
+        <h1><a href="https://kamilm1013.github.io/ECS8th2018_2019/"</a>Batman Begins</h1>
     </header>
     
     <section>
@@ -33,7 +33,7 @@
           <li> Lucius Fox
           <li> Ducard
         </ul>
-        <a href="https://www.imdb.com/title/tt0372784/" title="Movie Character">If you want to know more about this movie click here.</a>
+        <a href="https://www.imdb.com/title/tt0372784/" target="_blank" title="Movie Character">If you want to know more about this movie click here.</a>
     </section>
 
     <hr>
