--- a/Misc/index.html
+++ b/Misc/index.html
@@ -8,7 +8,7 @@
     </head>
    
     <header>
-        <h1>Hello!</h1>
+        <h1><a href="https://kamilm1013.github.io/index.html" title="Go Back"</a>Hello!</h1>
     </header>
     
     <body>
