--- a/ECS8th2018_2019/index.html
+++ b/ECS8th2018_2019/index.html
@@ -27,6 +27,8 @@
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/birthday_invitation/index.html" target="_blank" title="Birthday Invitation">See My Birthday Invitation page!</a>
         <br>
         <a href="https://kamilm1013.github.io/ECS8th2018_2019/movie_review/index.html" target="_blank" title="Movie Review">Check out my new Movie Review!</a>
+        <br>
+        <a href="https://scratch.mit.edu/projects/278366893/" target="_blank" title="Scratch Movie">Check out my new Scratch game!!</a>
     </body>
              
 </html>
